--- a/style.css
+++ b/style.css
@@ -35,13 +35,45 @@ body{
     width: 240px;
     padding: 10px 10px;
 }
-.btn-create{
+.form-btn{
     padding: 10px 20px;
     border-radius: 5px;
     cursor: pointer;
     background-color: rgb(219, 0, 200);
 }
+.box__btn-settings{
+    padding: 10px 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 15px;
+}
+.btn-delete{
+    padding: 13px 19px;
+    border-radius: 5px;
+    cursor: pointer;
+    background-color: rgb(231, 53, 65);
+}
+.btn-update{
+    padding: 13px 19px;
+    border-radius: 5px;
+    cursor: pointer;
+    background-color: rgb(231, 53, 65);
+}
 #postsContainer{
     color: #FFF;
     padding: 50px 0 60px 70px;
+}
+.new-block{
+    width: 200px;
+    height: 200px;
+    border: 1px solid #000;
+}
+.txt-data{
+    font-size: 20px;
+    color: #FFF;
+}
+.btn-delete{
+
 }
